modificaciones al inicio

--- a/main.css
+++ b/main.css
@@ -13,8 +13,13 @@ html{
       header{
   
         height: 95px;
-        background-color: #203366;
+        background-color: #066C5D;
 
+}
+
+header nav a:hover{
+  background-color: #1d1d1d;
+  border-radius: 20px;
 }
     .nav-vertical {
         display: flex;
@@ -38,7 +43,9 @@ html{
       .logo-container img:hover{
         transform: scale(1.1);
       }
-      
+
+      /*TV*/
+
       .box3 a{
         text-decoration: none;
         color: black;
@@ -53,6 +60,100 @@ html{
       .social-links {
         margin-right: 20px;
       }
+      
     .cartel-radio{
-      background-color: #203366;
+      background-color: #CBD48E;
+      color: #000000;
     }
+
+
+ /* ICONO DE WHATASPP FLOTANTE */
+
+ @keyframes popup {
+  0% {
+    width: 0;
+    height: 0;
+  }
+  50% {
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    width: 5rem;
+    height: 5rem;
+  }
+}
+
+.wsp-btn a img{
+  height: 70px;
+  width: auto;
+  left: 95%;
+  top: 90%;
+  cursor: pointer;
+  z-index: 21;
+  display: none;
+  animation: popup 0.3s ease-in-out;
+  transition: all .3s ease;
+}
+.wsp-btn a img:hover {
+  transform: scale(1.1);
+}
+
+
+@keyframes popup {
+  0% {
+    width: 0;
+    height: 0;
+  }
+  50% {
+    width: 8rem;
+    height: 8rem;
+  }
+  100% {
+    width: 5rem;
+    height: 5rem;
+  }
+}
+
+
+    /* FOOTER */
+
+.pie-pagina {
+  margin-top: 120px;
+  background-color: #066C5D;
+}
+
+.box1 .img-container a img{
+  width: 250px;
+  height: auto;
+}
+
+.box2 a{
+  text-decoration: none;
+  color:#000000;
+}
+
+.box2 a:hover{
+  color: #ffffff;
+  transform: scale(1.1);
+}
+
+.redes a{
+  text-decoration: none;
+  text-align: center;
+  transition: all .3s ease;
+  color: #000000;
+}
+.redes a:hover{
+  color:rgb(216, 255, 242);
+}
+
+#btn-v-inicio{
+  background-color: #1d1d1d;
+  color: #d8d8d8;
+  text-decoration: none;
+  border-radius: 10px ;
+}
+#btn-v-inicio:hover{
+  background-color: #4181ac;
+}
