--- a/main.css
+++ b/main.css
@@ -5,22 +5,22 @@ html{
   }
     body{
       margin: 0;
+      background: #06142E!important;
       }
-      .text-bg-dark {
-        background-color: #1d1d1d;
-    }
 
       header{
   
         height: 95px;
-        background-color: #066C5D;
+        background-color: #FFA586;
 
 }
 
 header nav a:hover{
   background-color: #1d1d1d;
-  border-radius: 20px;
+  opacity: 0.9;
+  color: #d8d8d8 !important;
 }
+
     .nav-vertical {
         display: flex;
         list-style: none;
@@ -35,14 +35,66 @@ header nav a:hover{
        .navbar-toggler {
         border: none;
       }
-    
+      
       .logo-container img{
-        height: 80px;
+        height: 75px;
       }
-
+      
       .logo-container img:hover{
         transform: scale(1.1);
       }
+      .cartel-inicio {
+        top: 22rem;
+        background-color: #142452;
+        color: #ffffff;
+      }
+      .cartel-eter {
+        top: 22rem;
+        background-color: #BB5098;
+        color: #ffffff;
+      }
+      .cartel-secciones{
+        color: #d8d8d8 !important;
+      }
+      .carousel-inner{
+        height: 70%;
+      }
+      .img-eter{
+        opacity: 0.3;
+      }
+      .logo-eter{
+        width: 96px;
+      }
+      /* ICONO DE WHATASPP FLOTANTE */
+     
+      @keyframes popup {
+       0% {
+         width: 0;
+         height: 0;
+       }
+       50% {
+         width: 8rem;
+         height: 8rem;
+       }
+       100% {
+         width: 5rem;
+         height: 5rem;
+       }
+     }
+     
+     .wsp-btn a img{
+       height: 70px;
+       width: auto;
+       left: 95%;
+       top: 90%;
+       cursor: pointer;
+       z-index: 21;
+       animation: popup 0.3s ease-in-out;
+       transition: all .3s ease;
+     }
+     .wsp-btn a img:hover {
+       transform: scale(1.1);
+     }
 
       /*TV*/
 
@@ -60,67 +112,16 @@ header nav a:hover{
       .social-links {
         margin-right: 20px;
       }
-      
-    .cartel-radio{
-      background-color: #CBD48E;
-      color: #000000;
-    }
+    
 
 
- /* ICONO DE WHATASPP FLOTANTE */
-
- @keyframes popup {
-  0% {
-    width: 0;
-    height: 0;
-  }
-  50% {
-    width: 8rem;
-    height: 8rem;
-  }
-  100% {
-    width: 5rem;
-    height: 5rem;
-  }
-}
-
-.wsp-btn a img{
-  height: 70px;
-  width: auto;
-  left: 95%;
-  top: 90%;
-  cursor: pointer;
-  z-index: 21;
-  display: none;
-  animation: popup 0.3s ease-in-out;
-  transition: all .3s ease;
-}
-.wsp-btn a img:hover {
-  transform: scale(1.1);
-}
-
-
-@keyframes popup {
-  0% {
-    width: 0;
-    height: 0;
-  }
-  50% {
-    width: 8rem;
-    height: 8rem;
-  }
-  100% {
-    width: 5rem;
-    height: 5rem;
-  }
-}
 
 
     /* FOOTER */
 
 .pie-pagina {
   margin-top: 120px;
-  background-color: #066C5D;
+  background-color: #FFA586;
 }
 
 .box1 .img-container a img{
