Seccion de eter y boton de wsp

--- a/main.css
+++ b/main.css
@@ -70,16 +70,40 @@ html{
         background-color: #0c7075;
       }
 
-      /*IMAGENES CON OPACIDAD*/
-      /* .img-mdt{
-        opacity:0.7;
-      }
-      .img-eter{
-        opacity: 0.7;
-      }
-      .img-tv{
-        opacity: 0.7;
-      } */
+   /*GRID*/
+   .card {
+    position: relative; /* Para que la posición absoluta de .card-overlay sea relativa a la tarjeta */
+}
+   .card-img-container {
+    position: relative;
+    overflow: hidden;
+}
+
+.card-overlay {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.5); /* Color de fondo del overlay */
+  color: #fff; /* Color del texto */
+  padding: 20px;
+  box-sizing: border-box;
+  opacity: 0; /* Inicialmente oculto */
+  transition: opacity 0.3s ease; /* Transición suave de la opacidad */
+}
+
+.card-overlay h5,
+.card-overlay p {
+  margin: 0;
+}
+
+.card-overlay a {
+  color: #fff;
+}
+
+.card:hover .card-overlay {
+  opacity: 1; /* Mostrar overlay cuando se hace hover sobre la tarjeta */
+}
 
       /*LOGOS DE TITULOS*/
       .logo-mdt{
@@ -94,6 +118,9 @@ html{
       .logo-radio{
         width: 50px;
       }
+
+
+
       /*RADIO*/
       
       #radioStatus{
@@ -159,6 +186,7 @@ form{
      }
      
      .wsp-btn a img{
+       display: flex;
        height: 70px;
        width: auto;
        left: 95%;
@@ -226,4 +254,28 @@ form{
 }
 #btn-v-inicio:hover{
   background-color: #4181ac;
+}
+
+
+
+
+/*WSP media queries*/
+
+@media screen and (max-width:750px){
+  .wsp-btn a img {
+    left: 80%;
+    bottom: 70%;
+  }
+}
+@media screen and (min-width:850px){
+  .wsp-btn a img {
+    left: 90%;
+    bottom: 90%;
+  }
+}
+@media screen and (min-width:1300px){
+  .wsp-btn a img {
+    left: 93%;
+    top: 85%;
+  }
 }
