--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html{
   }
     body{
       margin: 0;
-      background: #d5deef!important;
+      background: #8aaee0!important;
       }
 
       header{
@@ -49,8 +49,8 @@ html{
       
       .cartel-inicio {
         top: 22rem;
-        background-color: #395886;
-        color: #ffffff;
+        background-color: #b1c9ef;
+        color: #022B42;
       }
       .cartel-eter {
         top: 22rem;
@@ -59,8 +59,8 @@ html{
       }
       .cartel-tv{
         top: 22rem;
-        background-color: #022B42;
-        color: #F0F3F4;
+        background-color: #b1c9ef;
+        color: #022B42;
       } 
       .cartel-secciones{
         color: #1d1d1d !important;
@@ -69,7 +69,9 @@ html{
         height: 70%;
       }
       .h-contacto{
-        background-color: #0c7075;
+        background-color: #1d1d1d;
+        font-size: 4rem;
+        color: #d8d8d8;
       }
 
    /*GRID*/
@@ -158,7 +160,7 @@ html{
     /*formulario*/
 
 form{
-  background-color: #0c7075;
+  background-color: #8aaee0;
 }
 .formulario__grupo-correcto .formulario__validacion-estado {
 	color: #1ed12d;
@@ -221,10 +223,13 @@ form{
       }
       .ver-mas{
         background-color: #bb2929;
-        border-radius: 10px;
+        border-radius: 20px;
       }
       .social-links {
         margin-right: 20px;
+      }
+      .cartel-flotante{
+        box-shadow: 5px 5px 5px rgb(0,0,0,0.5);
       }
     
 
@@ -268,7 +273,6 @@ form{
 
 
 
-
 /*WSP media queries*/
 
 @media screen and (max-width:750px){
@@ -289,3 +293,6 @@ form{
     top: 85%;
   }
 }
+
+/*contacto media*/
+
