--- a/formulario.css
+++ b/formulario.css
@@ -134,7 +134,7 @@ form{
 
 .pie-pagina {
     margin-top: 120px;
-    background-color: #395886;
+    background-color: #353f41;
   }
   
   .box1 .img-container a img{
