--- a/radio.css
+++ b/radio.css
@@ -141,7 +141,7 @@ nav ul li a:hover {
 /* Pie de página */
 .pie-pagina {
     margin-top: 120px;
-    background-color: #395886;
+    background-color: #353f41;
 }
 
 .box1 .img-container a img {
