--- a/main.css
+++ b/main.css
@@ -5,7 +5,7 @@ html{
   }
     body{
       margin: 0;
-      background: #8aaee0!important;
+      background: #353f41!important;
       }
 
       header{
@@ -50,13 +50,19 @@ html{
       
       .cartel-inicio {
         top: 22rem;
-        background-color: #b1c9ef;
-        color: #022B42;
+        background-color: #353f41;
+        color: #ff7401;
+      }
+      .title-mdt{
+        font-size: 4rem;
       }
       .cartel-eter {
         top: 22rem;
-        background-color: #7A5197;
-        color: #ffffff;
+        background-color: #F4A896;
+        color: #358597;
+      }
+      .eter-span{
+        font-size: 4rem;
       }
       .cartel-tv{
         top: 22rem;
@@ -64,7 +70,7 @@ html{
         color: #022B42;
       } 
       .cartel-secciones{
-        color: #1d1d1d !important;
+        color: #ff7401 !important;
       }
       .carousel-inner{
         height: 70%;
@@ -78,7 +84,10 @@ html{
     position: relative;
     overflow: hidden;
 }
-
+.card:hover{
+  transform: scale(1.03);
+  transition: 0.5s ease-out;
+}
 .card-overlay {
   position: absolute;
   bottom: 0;
@@ -118,7 +127,7 @@ html{
         width: 36px;
       }
       .logo-eter{
-        width: 78px;
+        width: 100px;
       }
       .logo-tv{
         width: 64px;
@@ -179,13 +188,57 @@ html{
     
 
 
+      .box {
+        display: flex;
+        width: 100%;
+        height: 8px;
+        margin: 5px 0px 60px 0px;
+      }
+      
+      .box-sm {
+        height: 8px;
+        margin: 0;
+        flex-grow: 1;
+        transition: all .8s ease-in-out;
+        cursor: pointer;
+      }
+      
+      
+      .box-sm:hover {
+        flex-grow: 12;
+      }
 
+
+
+      .red {
+        background-color: #FF5852;
+      }
+      
+      .orange {
+        background-color: #FF9000;
+      }
+      
+      .yellow {
+        background-color: #FFD300;
+      }
+      
+      .green {
+        background-color: #3DCD49;
+      }
+      
+      .blue {
+        background-color: #0089D7;
+      }
+      
+      .purple {
+        background-color: #9E44C4;
+      }
 
     /* FOOTER */
 
 .pie-pagina {
-  margin-top: 120px;
-  background-color: #395886;
+  margin-top: 30px;
+  background-color: #353f41;
 }
 
 .box1 .img-container a img{
@@ -194,6 +247,10 @@ html{
 }
 .box2{
   color:#F0F3F4;
+}
+
+.siguenos{
+  color:#ff7401
 }
 
 .redes a{
