--- a/radio.css
+++ b/radio.css
@@ -68,7 +68,10 @@ nav ul li a:hover {
     background-color: #575757!important;
     opacity: 0.8;
     color: #ffffff;
+    ;
 }
+
+
 
 /* Título de la radio */
 .title-radio {
