modificaciones en radio y footer

--- a/formulario.css
+++ b/formulario.css
@@ -144,7 +144,9 @@ form{
   .box2{
     color:#F0F3F4;
   }
-  
+  .siguenos{
+    color:#ff7401
+  }
   .redes a{
     text-decoration: none;
     text-align: center;
