modificaciones en el inicio

--- a/formulario.css
+++ b/formulario.css
@@ -6,7 +6,7 @@ html{
     margin:0;
 }
 body{
-        background-image: url(img/contacto-1.png);
+        background-image: url(img/contacto-1.jpg);
         background-size: cover;
         background-repeat: no-repeat;
         /* backdrop-filter: blur(2px); */
