--- a/resource/radio.css
+++ b/resource/radio.css
@@ -9,7 +9,7 @@ html {
 }
 
 body {
-    background-image: url(img/fondo-radio-ok.jpg);
+    background-image: url(/img/fondo-radio-ok.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     backdrop-filter: blur(1.5px);
