--- a/resource/formulario.css
+++ b/resource/formulario.css
@@ -6,10 +6,11 @@ html{
     margin:0;
 }
 body{
-        background-image: url(/img/contacto-1.jpg);
+        /* background-image: url(/img/contacto-1.jpg);
         background-size: cover;
-        background-repeat: no-repeat;
+        background-repeat: no-repeat; */
         /* backdrop-filter: blur(2px); */
+        background-color: #353f41!important;
       }
 
      header{
@@ -49,10 +50,6 @@ body{
       
       .logo-container img{
         height: 75px;
-      }
-      
-      .logo-container img:hover{
-        transform: scale(1.1);
       }
 
 
@@ -129,6 +126,52 @@ form{
        .wsp-btn a img:hover {
          transform: scale(1.1);
        }
+
+
+       .box {
+        display: flex;
+        width: 100%;
+        height: 8px;
+        margin: 5px 0px 60px 0px;
+      }
+      
+      .box-sm {
+        height: 8px;
+        margin: 0;
+        flex-grow: 1;
+        transition: all .8s ease-in-out;
+        cursor: pointer;
+      }
+      
+      
+      .box-sm:hover {
+        flex-grow: 12;
+      }
+
+
+      .red {
+        background-color: #FF5852;
+      }
+      
+      .orange {
+        background-color: #FF9000;
+      }
+      
+      .yellow {
+        background-color: #FFD300;
+      }
+      
+      .green {
+        background-color: #3DCD49;
+      }
+      
+      .blue {
+        background-color: #0089D7;
+      }
+      
+      .purple {
+        background-color: #9E44C4;
+      }
 
        /* FOOTER */
 
