--- a/resource/radio.css
+++ b/resource/radio.css
@@ -9,11 +9,11 @@ html {
 }
 
 body {
-    background-image: url(/img/fondo-radio-ok.jpg)!important;
+    /* background-image: url(/img/fondo-radio-ok.jpg)!important;
     background-size: cover !important;
     background-repeat: no-repeat !important;
-    backdrop-filter: blur(1.5px) !important;
-    /* background-color: #1d1d1d !important; */
+    backdrop-filter: blur(1.5px) !important; */
+    background-color: #1d1d1d !important;
 }
 
 /* Encabezado */
@@ -139,7 +139,6 @@ nav ul li a:hover {
 
 /* Pie de página */
 .pie-pagina {
-    margin-top: 120px;
     background-color: #353f41;
 }
 
@@ -176,6 +175,56 @@ nav ul li a:hover {
 #btn-v-inicio:hover {
     background-color: #4181ac;
 }
+
+
+.box {
+    display: flex;
+    width: 100%;
+    height: 8px;
+  }
+  
+  .box-sm {
+    height: 8px;
+    margin: 0;
+    flex-grow: 1;
+    transition: all .8s ease-in-out;
+    cursor: pointer;
+  }
+  
+  
+  .box-sm:hover {
+    flex-grow: 12;
+  }
+
+
+  .red {
+    background-color: #FF5852;
+  }
+  
+  .orange {
+    background-color: #FF9000;
+  }
+  
+  .yellow {
+    background-color: #FFD300;
+  }
+  
+  .green {
+    background-color: #3DCD49;
+  }
+  
+  .blue {
+    background-color: #0089D7;
+  }
+  
+  .purple {
+    background-color: #9E44C4;
+  }
+
+
+
+
+
 
 /* Media queries para el icono de WhatsApp */
 @media screen and (max-width: 750px) {
