--- a/formulario.css
+++ b/formulario.css
@@ -6,11 +6,11 @@ html{
     margin:0;
 }
 body{
-        /* background-image: url(/img/contacto-1.jpg) !important;
+        background-image: url(/img/contacto-1.jpg) !important;
         background-size: cover !important;
         background-repeat: no-repeat !important; 
-        backdrop-filter: blur(2px) !important; */
-        background-color: #353f41!important;
+        backdrop-filter: blur(2px) !important;
+        /* background-color: #353f41!important; */
       }
 
      header{
@@ -132,7 +132,6 @@ form{
         display: flex;
         width: 100%;
         height: 8px;
-        margin: 5px 0px 60px 0px;
       }
       
       .box-sm {
@@ -176,7 +175,6 @@ form{
        /* FOOTER */
 
 .pie-pagina {
-    margin-top: 120px;
     background-color: #353f41;
   }
   
