--- a/radio.css
+++ b/radio.css
@@ -9,10 +9,10 @@ html {
 }
 
 body {
-    background-image: url(/img/fondo-radio-ok.jpg)!important;
-    background-size: cover !important;
-    background-repeat: no-repeat !important;
-    backdrop-filter: blur(1.5px) !important;
+    background-image: url(/img/fondo-radio-ok.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    backdrop-filter: blur(1.5px);
     /* background-color: #1d1d1d !important; */
 }
 
