--- a/formulario.css
+++ b/formulario.css
@@ -6,11 +6,11 @@ html{
     margin:0;
 }
 body{
-        background-image: url(/img/contacto-1.jpg) ;
+        /* background-image: url(/img/contacto-1.jpg) ;
         background-size: cover ;
         background-repeat: no-repeat ; 
-        backdrop-filter: blur(2px) ;
-        /* background-color: #353f41!important; */
+        backdrop-filter: blur(2px) ; */
+        background-color: #353f41!important;
       }
 
      header{
